Fix for center aligned toggle switch

--- a/client/css/aui.sass
+++ b/client/css/aui.sass
@@ -794,6 +794,7 @@ $nav-text: #C7CBD1
       .switch
         grid-row: 2
         grid-column: 1
+        justify-self: center
 
     &.bottom
       margin-bottom: .5rem
